[tool.poetry]
name = "bareasgi-oauth-client"
version = "0.1.0"
description = "Client side oauth support for the bareASGI framework"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_oauth_client" },
]
repository = "https://github.com/rob-blackbourn/bareasgi-oauth-client"

[tool.poetry.dependencies]
python = "^3.8"
bareASGI = "^4.0.0-alpha.5"
bareASGI-session = "^4.0.0-alpha.3"
Hypercorn = "^0.11"
bareclient = "^5.0.0-alpha.8"
oauthlib = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pylint = "^2.10"
mypy = "^0.910"
autopep8 = "^1.5"

[tool.poetry.extras]
graphene = [ "graphene" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
